--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,11 @@
-
+body{
+  color: white;
+  background: black;
+  margin: 0px;
+}
+header{
+  border-bottom:solid2pxrgb(42,122,228);
+  padding: 20px;
+  font-size: 32px
+  color: rgb(42,122,228)
+}
