--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@ body{
   margin: 0px;
 }
 header{
-  border-bottom:solid2pxrgb(42,122,228);
+  border-bottom:solid 2px rgb(42, 122, 228);
   padding: 20px;
   font-size: 32px
-  color: rgb(42,122,228)
+  color: rgb(42, 122, 228)
 }
