--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 body{
   color: white;
-  background: black;
+  background: pink;
   margin: 0px;
 }
 header{
   border-bottom: solid 2px rgb(42, 122, 228);
   padding: 20px;
   font-size: 32px;
-  color: rgb(42, 122, 228);
+  color: rgb(328, 22, 96);
 }
